Text alignment fix

--- a/src/css/CreationMessage.css
+++ b/src/css/CreationMessage.css
@@ -62,5 +62,5 @@ width: 100%;
 
 #elItem{
   padding-left: 4px;
-  width: 60%;
+  width: 100%;
 }
